[package]
name = "aus-analyzer"
license = "MIT OR Apache-2.0"
version = "0.1.7"
edition = "2021"
description = "A Rust-based audio analyzer for Python"
repository = "https://github.com/fleximeter/aus-analyzer"
readme = "README.md"
categories = ["multimedia", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aus_analyzer"
crate-type = ["cdylib"]

[dependencies]
aus = {path="../aus-rust"}
ndarray = "0.16.1"
num = "0.4.3"
numpy = "0.25.0"
pyo3 = "0.25.0"
threadpool = "1.8.1"
